--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-Django~=3.0
+asgiref==3.2.3
+dj-database-url==0.5.0
+Django==3.0
+gunicorn==20.0.4
+pkg-resources==0.0.0
+playsound==1.2.2
+pytz==2019.3
+sqlparse==0.3.0
+whitenoise==5.0.1
+psycopg2==2.7.2
